refactor: rename project from NeuroThrive to DivergentThrive
- Update app name in manifest.json (DivergentThrive Daily)
- Update service worker cache name (divergentthrive-v2.0)
- Update all UI references in index.html
- Update deep link scheme to divergentthrive://safehaven/unlock
- Update Play Store package ID to app.divergentthrive.safehaven.plus
- Update localStorage key to divergentthrive_advanced_unlocked
- Update notification title to DivergentThrive Daily

BREAKING CHANGE: Deep link URL changed from neurothrive:// to divergentthrive://
This requires Android app to be updated simultaneously with matching deep link intent filter.

Reason: NeuroThrive is a trademarked name. DivergentThrive is verified clear.

--- a/secret-unlock-template.html
+++ b/secret-unlock-template.html
@@ -99,7 +99,7 @@
 
                 <!-- About -->
                 <div style="margin: 1.5rem 0;">
-                    <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem; font-weight: 600;">About NeuroThrive</h3>
+                    <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem; font-weight: 600;">About DivergentThrive</h3>
                     <p style="color: var(--text-secondary); font-size: 0.9rem; line-height: 1.6;">
                         Your neurodivergent support companion, designed to help you thrive with ADHD,
                         track your wellness, and maintain healthy routines.
@@ -153,7 +153,7 @@
                     }, 10);
 
                     // Store that advanced features were unlocked
-                    localStorage.setItem('neurothrive_advanced_unlocked', 'true');
+                    localStorage.setItem('divergentthrive_advanced_unlocked', 'true');
 
                     // Reset counter
                     versionTapCount = 0;
@@ -171,19 +171,19 @@
 
         function openSafeHavenApp() {
             // Try to open Android app via deep link
-            const deepLinkUrl = 'neurothrive://safehaven/unlock';
+            const deepLinkUrl = 'divergentthrive://safehaven/unlock';
 
             console.log('🔗 Attempting to open SafeHaven app via deep link...');
             window.location.href = deepLinkUrl;
 
             // Fallback: Offer Play Store download after 1.5 seconds
             setTimeout(() => {
-                const playStoreUrl = 'https://play.google.com/store/apps/details?id=app.neurothrive.safehaven.plus';
+                const playStoreUrl = 'https://play.google.com/store/apps/details?id=app.divergentthrive.safehaven.plus';
 
                 const downloadApp = confirm(
-                    'NeuroThrive Plus app not detected.\n\n' +
+                    'DivergentThrive Plus app not detected.\n\n' +
                     'Would you like to download it from the Play Store?\n\n' +
-                    'NeuroThrive Plus provides enhanced privacy and data protection features.'
+                    'DivergentThrive Plus provides enhanced privacy and data protection features.'
                 );
 
                 if (downloadApp) {
@@ -194,7 +194,7 @@
 
         // Check if advanced features were previously unlocked
         window.addEventListener('load', () => {
-            if (localStorage.getItem('neurothrive_advanced_unlocked') === 'true') {
+            if (localStorage.getItem('divergentthrive_advanced_unlocked') === 'true') {
                 const advancedFeatures = document.getElementById('advancedFeatures');
                 if (advancedFeatures) {
                     advancedFeatures.style.display = 'block';
@@ -228,7 +228,7 @@ TESTING THE SECRET UNLOCK:
 7. Verify deep link attempt (will prompt for Play Store if app not installed)
 
 SECURITY NOTES:
-- Deep link URL: neurothrive://safehaven/unlock
+- Deep link URL: divergentthrive://safehaven/unlock
 - No obvious DV/SafeHaven references in UI
 - Unlock state persists in localStorage
 - Fallback to Play Store for app download
